--- a/about-us.html
+++ b/about-us.html
@@ -30,7 +30,7 @@
            </header>
         </div>
 
-        <main>
+        <main class="clearfix">
             <div class="container clearfix">
                 <div class="page-title">
                     <h2>About &nbsp; us</h2>
@@ -97,14 +97,18 @@
                     <div class="aside-div">
                         <h5>Photo Gallery</h5>
                         <div class="aside-border"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
+                        <div class="photo">
+                            <div class="photo-boxes"></div>
+                            <div class="photo-boxes"></div>
+                            <div class="photo-boxes"></div>
+                            <div class="photo-boxes"></div>
+                        </div>
+                        <div class="photo">
+                            <div class="photo-boxes"></div>
+                            <div class="photo-boxes"></div>
+                            <div class="photo-boxes"></div>
+                            <div class="photo-boxes"></div>
+                        </div>
                     </div>
                 </aside>
             </div>            
