--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
                 <section class="contents">
                     <div class="blogpost">
                         <img class="iconblog" src="img/iconblog1.jpg" height="75" width="75" alt="Icon-pic">
-                        <img src="img/blog1.jpg" height="300" width="670" alt="Wordpress Themes of 2012">
+                        <div class="blog1 img-blog"></div>
                         <div class="information">
                             <div class="info">
                                 <h5>Date</h5>
@@ -58,7 +58,7 @@
                     </div>
                     <div class="blogpost">
                         <img class="iconblog" src="img/iconblog2.jpg" height="75" width="75" alt="Icon-pic">
-                        <img src="img/blog2.jpg" height="300" width="670" alt="Wordpress Themes of 2012">
+                        <div class="blog2 img-blog"></div>
                         <div class="information">
                             <div class="info">
                                 <h5>Date</h5>
@@ -78,7 +78,7 @@
                     </div>
                     <div class="blogpost">
                         <img class="iconblog" src="img/iconblog3.jpg" height="75" width="75" alt="Icon-pic">
-                        <img src="img/blog3.jpg" height="300" width="670" alt="Wordpress Themes of 2012">
+                        <div class="blog3 img-blog"></div>
                         <div class="information">
                             <div class="info">
                                 <h5>Date</h5>
@@ -145,14 +145,18 @@
                     <div class="aside-div">
                         <h5>Photo Gallery</h5>
                         <div class="aside-border"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
+                        <div class="photo clearfix">
+                            <div class="photo-boxes"></div>
+                            <div class="photo-boxes"></div>
+                            <div class="photo-boxes"></div>
+                            <div class="photo-boxes"></div>
+                        </div>
+                        <div class="photo clearfix">
+                            <div class="photo-boxes"></div>
+                            <div class="photo-boxes"></div>
+                            <div class="photo-boxes"></div>
+                            <div class="photo-boxes"></div>
+                        </div>
                     </div>
                 </aside>
             </div>            
