--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                     <h2>Contact &nbsp; Us</h2>
                 </div>
                 <section class="contents contact">
-                    <img class="map" src="img/map.jpg" height="400" width="675" alt="Map">
+                    <div class="map"></div>
                     <div class="contact-info">
                         <p>Lorem ipsum dolor sit amet, in consectetur adipiscing elit. Siri Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum.</p>
                         <h6>Best PSD Freebies</h6>
@@ -59,7 +59,7 @@
                                 <input type="email" placeholder="Email Address">
                             </div>
                             <div class="input">
-                                <textarea name="Message" id="" cols="69" rows="10" placeholder="Message"></textarea>
+                                <textarea name="Message" id="Message" rows="10" placeholder="Message"></textarea>
                             </div>
                             <div class="input">
                                 <input class="submit" type="submit" value="Submit">
@@ -88,14 +88,18 @@
                     <div class="aside-div">
                         <h5>Photo Gallery</h5>
                         <div class="aside-border"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
-                        <div class="photo-boxes"></div>
+                        <div class="photo">
+                            <div class="photo-boxes"></div>
+                            <div class="photo-boxes"></div>
+                            <div class="photo-boxes"></div>
+                            <div class="photo-boxes"></div>
+                        </div>
+                        <div class="photo">
+                            <div class="photo-boxes"></div>
+                            <div class="photo-boxes"></div>
+                            <div class="photo-boxes"></div>
+                            <div class="photo-boxes"></div>
+                        </div>
                     </div>
                 </aside>
             </div>            
